tests/expectations/compiler/tuple/singleton_tuple_fail.out
Error [EPAR0370029]: A tuple type must have at least two elements.
    --> compiler-test:6:16
     |
   6 |         let c: (u8) = (a);
     |                ^^^^
Error [EPAR0370029]: A tuple type must have at least two elements.
    --> compiler-test:7:16
     |
   7 |         let d: (u8) = (3u8 + 4u8);
     |                ^^^^
